--- a/public/project-smart-ai.html
+++ b/public/project-smart-ai.html
@@ -20,8 +20,8 @@
 
       <div class="nav-links">
         <a href="/index.html#featured">Explore</a>
-        <a href="/index.html#featured">Nodes</a>
-        <a href="/index.html#featured">Bridge</a>
+        <a href="/index.html#featured" data-soon-toast>Nodes</a>
+        <a href="/index.html#featured" data-soon-toast>Bridge</a>
       </div>
 
       <nav class="actions">
@@ -91,51 +91,6 @@
           </div>
         </div>
 
-        <div class="project-card">
-          <h3>Support This Project</h3>
-          <div class="project-tier">
-            <div class="project-tier__header">
-              <div class="project-tier__title">Semantic Explorer Pass</div>
-              <div class="project-tier__price">$299</div>
-            </div>
-            <p>Experience Agent Joi guiding the semantic pipeline from natural-language prompt to full 3D scene.</p>
-            <ul>
-              <li>Interactive demo build featuring Joi’s animation showcase</li>
-              <li>Downloadable motion and rig presets used in the presentation</li>
-              <li>Monthly livestream breakdown of prompt-to-production workflows</li>
-              <li>Private Discord channel for early feedback</li>
-            </ul>
-            <footer>100 / 100 claimed</footer>
-          </div>
-          <div class="project-tier">
-            <div class="project-tier__header">
-              <div class="project-tier__title">Production Toolkit</div>
-              <div class="project-tier__price">$399</div>
-            </div>
-            <p>Unlock the automated animation stack that powers Joi’s end-to-end semantic game builds.</p>
-            <ul>
-              <li>Access to skeletal rig generator and keyframe sequencing scripts</li>
-              <li>Starter library of synchronized logic bindings for interactive actions</li>
-              <li>Template UI surfaces generated directly from natural language</li>
-              <li>Quarterly roadmap session with the Kingnet AI production team</li>
-            </ul>
-            <footer>400 / 750 claimed</footer>
-          </div>
-          <div class="project-tier">
-            <div class="project-tier__header">
-              <div class="project-tier__title">Studio Integration Partner</div>
-              <div class="project-tier__price">$1,200</div>
-            </div>
-            <p>Collaborate with our engineers to embed semantic automation inside your production pipeline.</p>
-            <ul>
-              <li>Dedicated onboarding for connecting your asset catalog to the platform</li>
-              <li>Bi-monthly prototyping calls with animation, logic, and physics specialists</li>
-              <li>Priority access to enterprise features and closed beta tooling</li>
-              <li>Invitation to showcase your studio’s Joi-powered workflows during launch events</li>
-            </ul>
-            <footer>25 / 50 claimed</footer>
-          </div>
-        </div>
       </aside>
     </div>
   </main>
