--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="announcement" role="status">BNB network on the 28th — for now only Solana network.</div>
   <header class="topbar">
     <div class="wrap nav">
       <a class="brand" href="/">
